--- a/deno.json
+++ b/deno.json
@@ -1,7 +1,9 @@
 {
   "imports": {
     "@types/node": "npm:@types/node@^22.13.6",
-    "uwasi": "npm:uwasi@^1.3.0"
+    "tinyglobby": "npm:tinyglobby@^0.2.12",
+    "uwasi": "npm:uwasi@^1.4.0",
+    "solar": "./mod.ts"
   },
   "fmt": {
     "semiColons": false,
