--- a/deno.json
+++ b/deno.json
@@ -24,7 +24,7 @@
   "version": "0.0.0",
   "license": "MIT",
   "exports": {
-    "./": "./mod.ts",
+    ".": "./mod.ts",
     "./types": "./types.ts"
   }
 }
